@@ -33,7 +33,7 @@
 <div id="top">
 
 <!-- relink this to the ten wiki asap -->
-<a href="http://www.gnome.org/press/releases/gnome10years.html"><img src="img/flash/gnome10years.jpg" title="GNOME Celebrates 10 Years of Software Freedom" alt="" width="750" height="350"/></a>
+<a href="http://www.gnome.org/start/2.20/notes/C"><img src="img/flash/two-twenty.jpg" title="GNOME 2.20 Released!" alt="" width="750" height="350"/></a>
 
 
 </div><!-- top -->
@@ -45,6 +45,11 @@
 
 <div id="bottomLeftLeft">
 <h2>Latest News</h2>
+
+<h3><a href="http://www.gnome.org/start/2.20/notes/C">GNOME 2.20 Released!</a></h3>
+<p>The GNOME desktop and platform received a lot of improvements and new
+features. Learn more about this release through the detailed 
+<a href="http://www.gnome.org/start/2.20/notes/C/">release notes</a>.</p>
 
 <h3><a href="http://www.gnomejournal.org/">The GNOME Journal, June Edition</a></h3>
 <p>The latest issue of the GNOME Journal has just been published. GNOME Journal
@@ -58,12 +63,6 @@ will advance the use, development and commercialization of GNOME components as a
 mobile and embedded user experience platform. It brings together industry
 leaders, expert consultants, key developers and the community and industry
 organizations they represent.</p>
-
-<h3><a href="http://www.gnome.org/start/2.18/">GNOME 2.18 Released!</a></h3>
-<p>The GNOME desktop is now faster and easier to configure than ever before.
-Learn more about this release through the <a
-href="http://www.gnome.org/start/2.18/">GNOME 2.18 start page</a> and the
-detailed <a href="http://www.gnome.org/start/2.18/notes/C/">release notes</a>.</p>
 
 </div>
 
