@@ -1,3 +1,8 @@
+2007-09-19  Lucas Rocha  <lucasr@gnome.org>
+	
+	* www.gnome.org/index.html: news entry about GNOME 2.20 release.
+	* www.gnome.org/img/flash/two-twenty.jpg: GNOME 2.20 front page banner.
+
 2007-09-19  Vincent Untz  <vuntz@gnome.org>
 
 	* www.gnome.org/htaccess: update stable/unstable redirects
